js/js.translator/testData/incremental/invalidation/typeScriptExportSurfaceUpdatesPerFile/lib2/l2.0.kt
fun helper(): Int = 0
